src/translations/ja/sdk/ios/v5/features/privacy.mdx
---
title: "プライバシー機能の設定"
description: "アプリ内でユーザーのプライバシーを処理するために使用できる機能を設定します。"
slug: "ja/sdk/ios/features/privacy"
multiVersion: true
---

Adjust SDKには、アプリ内でのユーザープライバシーの処理に使用できる機能が含まれています。

## [消去リクエストを送信する](send-erasure-request)

<CodeBlock title="メソッドシグネチャー">

```objc
+ (void)gdprForgetMe;
```

</CodeBlock>

EUの一般データ保護規則（GDPR）および類似する世界的なプライバシー法（CCPA、LGPDなど）は、個人データの処理に関する包括的な権利をデータ主体に付与しています。これらの権利には、消去権（[GDPR第17条](https://gdpr.eu/article-17-right-to-be-forgotten/)を参照）（[1](https://help.adjust.com/ja/article/gdpr#ref-1)）が含まれます。データ処理者として、Adjustは、（アプリ）ユーザー（データ管理者）からのそのようなリクエストの処理をサポートする義務があります。

`gdprForgetMe`メソッドを呼び出すことで、ユーザーの消去リクエストをAdjustに送信することができます。Adjustが通知を受けると、以下の対応をいたします。

-  Adjustはその内部システムおよびデータベースから、履歴として保管されているユーザーの全ての個人データを完全に削除します。
-  Adjustは、Adjust SDKを介して、このユーザー/デバイスからデータを受信しなくなります。（[2](https://help.adjust.com/ja/article/gdpr#ref-2)）

<Tabs>
<Tab title="Swift" sync="swift">

```swift
Adjust.gdprForgetMe()
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
[Adjust gdprForgetMe];
```

</Tab>
</Tabs>

## [特定のユーザーの情報をサードパーティと共有する](third-party-sharing-for-specific-users)

Adjust SDKを使用して、ユーザーがサードパーティとの共有設定を変更した時にそれを記録することができます。サードパーティの共有設定は、`AdjustThirdPartySharing`クラスを使用して構成されます。

### [AdjustThirdPartySharingオブジェクトをインスタンス化する](instantiate-an-adjustthirdpartysharing-object)

<CodeBlock title="メソッドシグネチャー">

```objc
- (nullable id)initWithIsEnabled:(nullable NSNumber *)isEnabled;
```

</CodeBlock>

Adjust SDKでサードパーティ共有を有効化または無効化するには、`AdjustThirdPartySharing`オブジェクトをインスタンス化する必要があります。このオブジェクトには、Adjustでサードパーティ共有をどのように扱うかをコントロールする変数が含まれています。

サードパーティ共有オブジェクトをインスタンス化するには、新しい`AdjustThirdPartySharing`インスタンスを作成して以下のパラメーターをパスしてください：

-  `isEnabled` （`NSNumber`）：サードパーティとの共有が有効化されているかどうか。サードパーティとの共有を有効化するには`1`を、無効化するには`0`をパスします。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing(isEnabled: 1)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabled:@1];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
</Tabs>
<Callout type="note">

`isEnabled`プロパティを`0`に設定すると、Adjustはユーザーのデータをサードパーティと共有しなくなります。Adjust SDKは引き続き通常通り動作します。

</Callout>

`AdjustThirdPartySharing`オブジェクトをインスタンス化したら、`AdjustThirdPartySharing`インスタンスを引数として`Adjust.trackThirdPartySharing`メソッドを呼び出すことで、Adjustに情報を送信することができます。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing(isEnabled: 0)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabled:@0];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
</Tabs>

### [粒度の高い情報を送信する](send-granular-information)

<CodeBlock title="メソッドシグネチャー">

```objc
- (void)addGranularOption:(nonnull NSString *)partnerName
                      key:(nonnull NSString *)key
                    value:(nonnull NSString *)value;
```

</CodeBlock>

ユーザーがサードパーティとの共有設定を変更する時に、詳細な情報を添付できます。この情報を使用して、ユーザーの選択に関するよりきめ細かい情報を伝えられます。これを行うには、以下のパラメータを使用して`addGranularOption`メソッドを呼び出します：

-  `partnerName` （`NSString`）：granular optionが適用されるパートナーの名前
-  `key` （`NSString`）：オプションのキー
-  `value` （`NSString`）：オプションの値

以下のパラメーターが利用可能です：

<Table>

| Partner Name                           | 文字列の値                  |
| -------------------------------------- | --------------------------- |
| Apple Ads                              | `apple_ads`                 |
| Facebook                               | `facebook`                  |
| Google 広告 \(Google Ads\)             | `adwords`                   |
| Google マーケティング プラットフォーム | `google_marketing_platform` |
| Snapchat                               | `snapchat`                  |
| Tencent                                | `tencent`                   |
| TikTok SAN                             | `tiktok_san`                |
| X（旧Twitter）                         | `twitter`                   |
| Yahoo Gemini                           | `yahoo_gemini`              |
| Yahoo\! JAPANスポンサードサーチ        | `yahoo_japan_search`        |

</Table>
<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing(isEnabled:nil)
adjustThirdPartySharing.addGranularOption("PartnerA", key: "foo", value: "bar")
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabled:nil];
[adjustThirdPartySharing addGranularOption:@"PartnerA" key:@"foo" value:@"bar"];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
</Tabs>

#### [Facebookのデータ使用制限に対応する](manage-facebook-limited-data-use)

<Callout type="important">

アプリがインストールされると、Adjust SDKはすぐに情報をFacebookに送信します。このメソッドは、必ずSDKを初期化する前に呼び出してください。

</Callout>

Facebookは、カリフォルニア州消費者プライバシー法（CCPA）に準拠するために、データ使用制限（LDU）と呼ばれる機能を提供しています。この機能を使うと、カリフォルニア州のユーザーがデータ販売をオプトアウトしたときに、Facebookに通知できます。デフォルトで全てのユーザーをオプトアウトしたい場合も、この機能を使用できます。

Facebook LDUのステータスは、`addGranularOption`メソッドに引数を渡すことで更新できます。

<Table>

| パラメーター                      | 説明                                                                                                                                                                                                     |
| --------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `partner_name`                    | `facebook`を使用してLDUを切り替えます。                                                                                                                                                                  |
| `data_processing_options_country` | ユーザーの居住国<ul><li>`0`：Facebookに位置情報の使用をリクエスト</li><li>`1`：アメリカ合衆国</li></ul>                                                                                                  |
| `data_processing_options_state`   | どの州に位置するユーザーであるかをFacebookに通知します。<ul><li>`0`：Facebookに位置情報の使用をリクエスト</li><li>`1000`：カリフォルニア</li><li>`1001`：コロラド</li><li>`1002`：コネチカット</li></ul> |

</Table>
<Callout type="note">

`data_processing_options_country`フィールド **または** `data_processing_options_state`フィールドに値`0`を指定してこのメソッドを呼び出すと、Adjust SDKは **両方** のフィールドを`0`としてパスします。

</Callout>
<Tabs>
<Tab title="Swift" sync="swift">

```swift
let tps = ADJThirdPartySharing(isEnabled:nil)
tps.addGranularOption("facebook", key: "data_processing_options_country", value: "1")
tps.addGranularOption("facebook", key: "data_processing_options_state", value: "1000")
Adjust.trackThirdPartySharing(tps)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *tps = [[ADJThirdPartySharing alloc] initWithIsEnabled:@1];
[tps addGranularOption:@"facebook" key:@"data_processing_options_country" value:@"1"];
[tps addGranularOption:@"facebook" key:@"data_processing_options_state" value:@"1000"];
[Adjust trackThirdPartySharing:tps];
```

</Tab>
</Tabs>
<Callout type="note">

`data_processing_options_country`フィールド **または** `data_processing_options_state`フィールドに値`0`を指定してこのメソッドを呼び出すと、Adjust SDKは **両方** のフィールドを`0`としてパスします。

</Callout>

#### [Googleに同意データを提供（デジタル市情法へのコンプライアンス）](provide-consent-data-to-google-digital-markets-act-compliance)

<Callout type="important">

Google 広告またはGoogle マーケティング プラットフォームを使用し、ユーザーの所在地が欧州経済領域（EEA）である場合は、これらの情報をパスする必要があります。

</Callout>

EUのデジタル市場法（DMA）に準拠するため、Google 広告およびGoogle マーケティング プラットフォームは、AdjustからAPIへのアトリビューションリクエストを受信することに明示的な同意を必要とします。 この同意を通知するには、パートナー`google_dma`のAdjustサードパーティ共有オブジェクトに、以下の詳細オプションを追加してください。

<Table autoWidth="1,2" width="3:500">

| 鍵 \(Key\)           | 値                                   | 説明                                                                                                                                                                                                                                                                        |
| -------------------- | ------------------------------------ | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `eea`                | `1` \(positive\) \| `0` \(negative\) | アプリをインストールしているユーザーが欧州経済地域内にいるかどうかを通知します。<br />これにはEU加盟国、スイス、ノルウェー、アイスランド、スロベニアが含まれます。                                                                                                          |
| `ad_personalization` | `1` \(positive\) \| `0` \(negative\) | Google 広告および/またはGoogle マーケティング プラットフォーム経由でパーソナライズされた広告を配信することにユーザーが同意したかどうかをAdjustに通知します。このパラメーターは、Google マーケティング プラットフォーム向けに予約されている`npa`パラメーターにも通知します。 |
| `ad_user_data`       | `1` \(positive\) \| `0` \(negative\) | ユーザーが広告主IDをアトリビューション目的で利用することに同意したかどうかをAdjustに通知します。                                                                                                                                                                            |

</Table>
<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing(isEnabled:nil)
adjustThirdPartySharing.addGranularOption("google_dma", key: "eea", value: "1")
adjustThirdPartySharing.addGranularOption("google_dma", key: "ad_personalization", value: "1")
adjustThirdPartySharing.addGranularOption("google_dma", key: "ad_user_data", value: "1")
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc]
                                                     initWithIsEnabled:nil];
[adjustThirdPartySharing addGranularOption:@"google_dma" key:@"eea" value:@"1"];
[adjustThirdPartySharing addGranularOption:@"google_dma" key:@"ad_personalization" value:@"1"];
[adjustThirdPartySharing addGranularOption:@"google_dma" key:@"ad_user_data" value:@"1"];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
</Tabs>

### [パートナー共有設定を更新する](update-partner-settings)

<CodeBlock title="メソッドシグネチャー">

```objc
- (void)addPartnerSharingSetting:(nonnull NSString *)partnerName
                             key:(nonnull NSString *)key
                           value:(BOOL)value;
```

</CodeBlock>

デフォルトでは、Adjustは全ての指標をアプリ設定で設定したパートナーと共有します。Adjust SDKを使用して、パートナーごとにサードパーティーとの共有設定を更新することができます。これを行うには、次の引数を使用して`addPartnerSharingSetting`メソッドを呼び出します。

<Table autoWidth="1,2,3">

| 引数          | データタイプ | 説明                                                                                                                                                                                                    |
| ------------- | ------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `partnerName` | `String`     | パートナーの名前。[利用可能なパートナーの全リストをダウンロードする](https://assets.ctfassets.net/5s247im0esyq/2QQROOadVqJzrME7yXKObe/7aca25e53d38befb2d469809e62b6fcc/3rd-party-sharing-partners.xlsx) |
| `key`         | `String`     | パートナーと共有する指標                                                                                                                                                                                |
| `value`       | `Boolean`    | ユーザーの決定                                                                                                                                                                                          |

</Table>

`key`を使用すると、無効化または再有効化する指標を指定できます。全ての指標の共有を有効化/無効化するには、 `all`キーを使用します。利用可能な指標のリストは以下をご覧ください。

<ListColumns>

-  `ad_revenue`
-  `all`
-  `attribution`
-  `update`
-  `att_update`
-  `cost_update`
-  `event`
-  `install`
-  `reattribution`

---

-  `reattribution_reinstall`
-  `reinstall`
-  `rejected_install`
-  `rejected_reattribution`
-  `sdk_click`
-  `sdk_info`
-  `session`
-  `subscription`
-  `uninstall`

</ListColumns>

パートナーの指標に対して`false`値を設定すると、Adjustはパートナーとの指標の共有を停止します。

<Callout type="tip">

指標を選択してパートナーと共有したい場合は、 `false`値を含む`all`キーをパスして全ての共有を無効にした後、 `true`値を含めて任意の指標をパスすると、共有するデータを制限することができます。

</Callout>

#### [例](examples)

特定のパートナーとの全ての指標の共有を停止する場合は、 `false`値を含む`all`キーをパスします。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", key: "all", value: false)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:nil];
[adjustThirdPartySharing addPartnerSharingSetting:@"PartnerA" key:@"all" value:@NO];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
</Tabs>

共有を再度有効化するには、 `true`値を含む`all`キーをパスします。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", key: "all", value: true)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:nil];
[adjustThirdPartySharing addPartnerSharingSetting:@"PartnerA" key:@"all" value:@YES];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
</Tabs>

異なるキーで`addPartnerSharingSetting`メソッドを複数回呼び出すことで、特定の指標の共有を停止または開始できます。例えば、イベント情報のみをパートナーと共有したい場合は、以下をパスすることができます。

-  `all` に`false`値を指定して、全ての情報の共有を無効化する。
-  `event` に`true`値を指定して、イベントの共有を有効化する。

<Callout type="note">

特定のキーは、常に`all`より優先されます。`all`を他のキーと一緒にパスすると、個々のキー値が`all`設定を上書きします。

</Callout>
<Tabs>
<Tab title="Swift" sync="swift">

```swift
let adjustThirdPartySharing = ADJThirdPartySharing.initWithIsEnabledNumberBool(nil)
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", key: "all", value: false)
adjustThirdPartySharing.addPartnerSharingSetting("PartnerA", key: "event", value: true)
Adjust.trackThirdPartySharing(adjustThirdPartySharing)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
ADJThirdPartySharing *adjustThirdPartySharing = [[ADJThirdPartySharing alloc] initWithIsEnabledNumberBool:nil];
[adjustThirdPartySharing addPartnerSharingSetting:@"PartnerA" key:@"all" value:@NO];
[adjustThirdPartySharing addPartnerSharingSetting:@"PartnerA" key:@"event" value:@YES];
[Adjust trackThirdPartySharing:adjustThirdPartySharing];
```

</Tab>
</Tabs>

## [サードパーティとの共有を無効にする](disable-third-party-sharing)

<CodeBlock title="メソッドシグネチャー">

```objc
+ (void)disableThirdPartySharing;
```

</CodeBlock>

全てのユーザーに対してサードパーティとのデータ共有を無効化するには、`disableThirdPartySharing`メソッドを呼び出します。Adjustサーバーがこの情報を受信すると、サードパーティとのデータ共有を停止します。Adjust SDKは引き続き通常通り動作します。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
Adjust.disableThirdPartySharing()
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
[Adjust disableThirdPartySharing];
```

</Tab>
</Tabs>

## [URL戦略を設定する](set-url-strategy)

<CodeBlock title="メソッドシグネチャー">

```objc
- (void)setUrlStrategy:(nullable NSArray *)urlStrategyDomains
        withSubdomains:(BOOL)useSubdomains
      andDataResidency:(BOOL)isDataResidency;
```

</CodeBlock>

URL戦略機能では、以下のいずれかを設定することができます：

-  Adjustがお客様のデータを保管する国（データレジデンシー）。
-  Adjust SDKがトラフィックを送信するエンドポイント（URL戦略）。

これは、プライバシー要件が厳しい国で事業を展開している場合に便利です。URL戦略を設定すると、Adjustは選択したデータレジデンシー地域にデータを保管したり、選択したドメインにトラフィックを送信したりします。

データレジデンシーの国を設定するには、次のパラメーターを指定して`AdjustConfig.setUrlStrategy`メソッドを呼び出します：

-  `urlStrategyDomains` （`NSArray`）：SDKトラフィックを送信する国またはデータの所在国またはエンドポイント。
-  `withSubdomains` （`BOOL`）：ソースにサブドメインのプレフィックスを付けるかどうか。
-  `andDataResidency` （`BOOL`）：ドメインをデータレジデンシーに使用するかどうか。

マッピングのリストについては、以下の表を参照してください。

<Table autoWidth="1,2">

| urlStrategy              | メインおよびフォールバックドメイン | サブドメインの使用 | データレジデンシー |
| ------------------------ | ---------------------------------- | ------------------ | ------------------ |
| EU データレジデンシー    | `"eu.adjust.com"`                  | `true`             | `true`             |
| トルコデータレジデンシー | `"tr.adjust.com"`                  | `true`             | `true`             |
| 米国 データレジデンシー  | `"us.adjust.com"`                  | `true`             | `true`             |
| 中国グローバル URL設定   | `"adjust.world"`。 `"adjust.com"`  | `true`             | `false`            |
| 中国 URL戦略             | `"adjust.cn"`。 `"adjust.com"`     | `true`             | `false`            |
| 中国限定 URL戦略         | `"adjust.cn"`                      | `true`             | `false`            |
| インド URL戦略           | `"adjust.net.in"`。 `"adjust.com"` | `true`             | `false`            |

</Table>
<Tabs>
<Tab title="Swift" sync="swift">

```swift
let domain = []
adjustConfig.setUrlStrategy(domain, withSubdomains: true, andDataResidency: false)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
NSArray *domain = [];
[adjustConfig setUrlStrategy:domain withSubdomains:YES
                     andDataResidency:YES];
```

</Tab>
</Tabs>

### [例](url-strategy-examples)

<Tabs>
<Tab title="Swift" sync="swift">
<CodeBlock title="インド URL戦略">

```swift
let domain = ["adjust.net.in", "adjust.com"]
adjustConfig.setUrlStrategy(domain, withSubdomains: true, andDataResidency: false)
```

</CodeBlock>
<CodeBlock title="中国 URL戦略">

```swift
let domain = ["adjust.world", "adjust.com"]
adjustConfig.setUrlStrategy(domain, withSubdomains: true, andDataResidency: false)
```

</CodeBlock>
<CodeBlock title="中国限定 URL戦略">

```swift
let domain = ["adjust.cn"]
adjustConfig.setUrlStrategy(domain, withSubdomains: true, andDataResidency: false)
```

</CodeBlock>
<CodeBlock title="EU データレジデンシー">

```swift
let domain = ["eu.adjust.com"]
adjustConfig.setUrlStrategy(domain, withSubdomains: true, andDataResidency: true)
```

</CodeBlock>
<CodeBlock title="トルコ データレジデンシー">

```swift
let domain = ["tr.adjust.com"]
adjustConfig.setUrlStrategy(domain, withSubdomains: true, andDataResidency: true)
```

</CodeBlock>
<CodeBlock title="米国 データレジデンシー">

```swift
let domain = ["us.adjust.com"]
adjustConfig.setUrlStrategy(domain, withSubdomains: true, andDataResidency: true)
```

</CodeBlock>
</Tab>
<Tab title="Objective-C" sync="objc">
<CodeBlock title="インド URL戦略">

```objc
NSArray *domain = [[NSArray alloc]
                       initWithObjects:@"adjust.net.in", @"adjust.com", nil];
[adjustConfig setUrlStrategy:domain withSubdomains:YES andDataResidency:NO];
```

</CodeBlock>
<CodeBlock title="中国 URL戦略">

```objc
NSArray *domain = [[NSArray alloc]
                       initWithObjects:@"adjust.world", @"adjust.com", nil];
[adjustConfig setUrlStrategy:domain withSubdomains:YES andDataResidency:NO];
```

</CodeBlock>
<CodeBlock title="中国限定 URL戦略">

```objc
NSArray *domain = [[NSArray alloc]
                       initWithObjects:@"adjust.cn", nil];
[adjustConfig setUrlStrategy:domain withSubdomains:YES andDataResidency:NO];
```

</CodeBlock>
<CodeBlock title="EU データレジデンシー">

```objc
NSArray *domain = [[NSArray alloc]
                       initWithObjects:@"eu.adjust.com", nil];
[adjustConfig setUrlStrategy:domain withSubdomains:YES andDataResidency:YES];
```

</CodeBlock>
<CodeBlock title="トルコ データレジデンシー">

```objc
NSArray *domain = [[NSArray alloc]
                       initWithObjects:@"tr.adjust.com", nil];
[adjustConfig setUrlStrategy:domain withSubdomains:YES andDataResidency:YES];
```

</CodeBlock>
<CodeBlock title="米国 データレジデンシー">

```objc
NSArray *domain = [[NSArray alloc]
                       initWithObjects:@"us.adjust.com", nil];
[adjustConfig setUrlStrategy:domain withSubdomains:YES andDataResidency:YES];
```

</CodeBlock>
</Tab>
</Tabs>

## [特定のユーザーの同意を計測する](consent-measurement-for-specific-users)

<CodeBlock title="メソッドシグネチャー">

```objc
+ (void)trackMeasurementConsent:(BOOL)enabled;
```

</CodeBlock>

Adjustダッシュボードで[データプライバシー設定](https://help.adjust.com/ja/article/manage-data-collection-and-retention)を使用している場合、Adjust SDKを動作させるための設定を行う必要があります。これには、同意有効期間やユーザーデータ保持期間などの設定が含まれます。

この機能を切り替えるには、次の引数を使用して`trackMeasurementConsent`メソッドを呼び出します：

-  `measurementConsent` （`BOOL`）：同意計測が有効化されている（`true`）か無効化されている（`false`）か。

有効化されている場合、SDKはデータプライバシー設定をAdjustサーバーに通信します。Adjustサーバーは、お客様のデータプライバシーのルールをユーザーに適用させます。Adjust SDKは引き続き通常通り動作します。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
Adjust.trackMeasurementConsent(true)
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
[Adjust trackMeasurementConsent:YES];
```

</Tab>
</Tabs>

## [児童オンラインプライバシー保護法（COPPA）コンプライアンス](coppa-compliance)

<CodeBlock title="メソッドシグネチャー">

```objc
+ (void)enableCoppaCompliance;
```

</CodeBlock>

アプリが児童オンラインプライバシー保護法（COPPA）に準拠する必要がある場合は、`[Adjust enableCoppaCompliance]`メソッドを呼び出します。このメソッドは、以下の動作を実行します。

1. サードパーティとの共有を無効にします。
2. SDKがデバイスIDと広告ID（例：`idfa`）を読み取るのを防ぐ。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox as? String
let adjustConfig = ADJConfig(
      appToken: yourAppToken,
      environment: environment)

Adjust.initSdk(adjustConfig)
Adjust.enableCoppaCompliance()
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
#import "Adjust.h"

NSString *yourAppToken = @"{YourAppToken}";
NSString *environment = ADJEnvironmentSandbox;
ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:yourAppToken
                                             andEnvironment:environment];

[Adjust initSdk:adjustConfig];
[Adjust enableCoppaCompliance];
```

</Tab>
</Tabs>

### [COPPAコンプライアンスを無効化する](disable-coppa-compliance)

<CodeBlock title="メソッドシグネチャー">

```objc
+ (void)disableCoppaCompliance;
```

</CodeBlock>

SDKの初期化中または初期化後に`[Adjust disableCoppaCompliance]`メソッドを呼び出すことで、いつでもCOPPAの準拠を無効にできます。このメソッドを呼び出すことで：

1. オプトアウトされていない限り、サードパーティの共有を再度有効化します。
2. Adjust SDKがデバイスIDと広告IDを読み取ることができます（例：`idfa`）。

<Tabs>
<Tab title="Swift" sync="swift">

```swift
let yourAppToken = "{YourAppToken}"
let environment = ADJEnvironmentSandbox
let adjustConfig = ADJConfig(
    appToken: yourAppToken,
    andEnvironment: environment)

Adjust.initSdk(adjustConfig)
Adjust.disableCoppaCompliance()
```

</Tab>
<Tab title="Objective-C" sync="objc">

```objc
#import "Adjust.h"

NSString *yourAppToken = @"{YourAppToken}";
NSString *environment = ADJEnvironmentSandbox;
ADJConfig *adjustConfig = [[ADJConfig alloc] initWithAppToken:@"{YourAppToken}"
                                                   andEnvironment:ADJEnvironmentSandbox];

[Adjust initSdk:adjustConfig];
[Adjust disableCoppaCompliance];
```

</Tab>
</Tabs>
